fixed api images and removed scrollbar

--- a/src/components/API/Card-style.css
+++ b/src/components/API/Card-style.css
@@ -22,7 +22,7 @@
     transition: 0.5s ease-in-out;
 }
 
-#api>img{
+#api img{
     z-index: 2;
     position: absolute;
     height: 80px;
